# UniqueSymbolFinder

./: .clang-format  .gitignore  CMakeLists.txt  README.MD  src.cpp
tested_headers/: text_searcher.hpp
tests/: CMakeLists.txt  tests_01.cpp  tests_02.cpp
